--- a/.gitignore
+++ b/.gitignore
@@ -74,14 +74,14 @@ docs/_build/
 target/
 
 # Jupyter Notebook
-/.ipynb_checkpoints
+.ipynb_checkpoints
 
 
 
 
 # IPython
 profile_default/
-/ipython_config.py
+ipython_config.py
 
 # pyenv
 .python-version
